syntax = "proto3";

package user;

service UserService {
  rpc ValidateUser (ValidateUserRequest) returns (ValidateUserResponse);
}

message ValidateUserRequest {
  string userId = 1;
}

message ValidateUserResponse {
  bool isValid = 1;
  string message = 2;
  User user = 3;
}

message User {
  string id = 1;
  string email = 2;
  string first_name = 3;
  bool active = 4;
}